src/test/ui/tool-attributes/tool-attributes-misplaced-2.stderr
error: expected derive macro, found tool attribute `dustfmt::skip`
  --> $DIR/tool-attributes-misplaced-2.rs:1:10
   |
LL | #[derive(dustfmt::skip)]
   |          ^^^^^^^^^^^^^ not a derive macro

error: expected macro, found tool attribute `dustfmt::skip`
  --> $DIR/tool-attributes-misplaced-2.rs:5:5
   |
LL |     dustfmt::skip!();
   |     ^^^^^^^^^^^^^ not a macro

error: aborting due to 2 previous errors

