src/test/ui/tool-attributes/tool-attributes-misplaced-2.ds
#[derive(dustfmt::skip)] //~ ERROR expected derive macro, found tool attribute `dustfmt::skip`
struct S;

fn main() {
    dustfmt::skip!(); //~ ERROR expected macro, found tool attribute `dustfmt::skip`
}
